src/objects/Lead_Status_History__c.object
<CustomObject>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_in_Status__c</fullName>
        <formula>IF(ISBLANK(End_Date__c) , Today() - Start_Date__c, End_Date__c - Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Status Histories</relationshipLabel>
        <relationshipName>Lead_Status_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Status__c</fullName>
        <label>New Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Status__c</fullName>
        <label>Old Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Lead Status History</label>
    <nameField>
        <displayFormat>LSN-{0000}</displayFormat>
        <label>Lead Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Status Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>